--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -80,8 +80,15 @@
 
 }
 
-/*
- *  color scheme: 
- *  primay: 508991
- *  secondary: 172A3A
-*/
+.requirements-container {
+    padding: 0 5rem;
+
+    .show-req {
+        display: block;
+        margin: auto;
+    }
+
+    .requirements {
+        padding: 3rem;
+    }
+}
